--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1068,11 +1068,14 @@ body.active{
     max-width: 600px;
   }
 }
+
 .form-parts{
-  border: 1px solid #000;
+  // border: 1px solid #000;
+  margin-top: 40px;
 
   &__label{
-  
+    display: flex;
+    align-items: center;
   }
 
   &__body{
@@ -1083,7 +1086,11 @@ body.active{
     border-radius: 6px;
     // outline: solid 1px red;
     border: 1px solid #707070;
+    margin-top: 10px;
 
+    &:focus{
+      background-color: #efefef;
+    }
   }
 }
 
@@ -1108,9 +1115,56 @@ body.active{
 
 }
 
+.textarea{
+  width: 100%;
+  height: 200px;
+}
+
+.acceptance{
+  margin-top: 40px;
+}
+
+.form-btn{
+  width: 200px;
+  font-size: rem(16);
+  border-radius: 6px;
+  cursor: pointer;
+  transition: all .4s;
+  border: 1px solid #707070;;
+  &:hover{
+    opacity: .6;
+  }
+}
+
+/* contact form7用 */ 
+/* エラーメッセージを見やすくする */
+span.wpcf7-not-valid-tip {
+  padding-top: 0.5em;
+  font-weight: 600;
+
+  &::before{
+    content: "※";
+  }
+}
+
+.cf7-submit-btn{
+  // margin-top: 80px;
+}
+
+.wpcf7 form .wpcf7-response-output{
+  color: #DD3232;
+  font-weight: bold;
+  margin: 0;
+}
+
+.wpcf7-spinner{
+  display: none;
+}
 
 @media (min-width: 768px){
-
+  form{
+    margin-top: 50px;
+  }
 }
 
 
