--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1167,6 +1167,97 @@ span.wpcf7-not-valid-tip {
   }
 }
 
+/* -------------------------------------------- */
+/* single */
+/* -------------------------------------------- */
+.single{
+  &__wrapper{
+    border: 1px solid #000;
+    padding: 40px 0;
+  }
+
+  &__top{
+    border: 1px solid #000;
+  }
+
+  &__explain{
+    max-width: 800px;
+    margin: 30px auto 0;
+  }
+
+
+  &__attention{
+    max-width: 600px;
+    margin: 40px auto 0;
+  }
+
+  &__detail{
+    
+  }
+
+  &__point{
+
+  }
+}
+
+@media (min-width: 768px){
+  .single{
+    &__top{
+
+    }
+  }
+}
+
+// 説明
+/* pc */
+.single-table{
+  width: 100%;
+  max-width: 900px;
+  margin: 30px auto 0;
+  
+  &__head{
+    padding: 10px 0;
+    text-align: left;
+    font-size: rem(20);
+  }
+}
+
+@media (max-width: 767px){
+  /* sp */
+  .single-table{
+    &__list,
+    &__head,
+    &__body{
+      display: block;
+    }
+  
+    &__list{
+      margin-top: 10px;
+    }
+  
+    &__head{
+      padding: 0;
+      font-size: rem(16);
+    }
+  }
+}
+
+/* -------------------------------------------- */
+/* contact */
+/* -------------------------------------------- */
+
+@media (min-width: 768px){
+
+}
+/* -------------------------------------------- */
+/* contact */
+/* -------------------------------------------- */
+
+@media (min-width: 768px){
+
+}
+
+
 
 /* -------------------------------------------- */
 /* ▼タブレット用デザインとして付け足すデザイン */
