--- a/css/styles.css
+++ b/css/styles.css
@@ -157,7 +157,7 @@ section {
 
 /* ページタイトル */
 .page-heading {
-  padding: 120px 0 50px;
+  padding: 120px 20px 50px;
   text-align: center;
 }
 
@@ -235,6 +235,9 @@ section {
   height: 40px;
   display: flex;
   align-items: center;
+}
+
+.breadcrumbs-mb {
   margin-bottom: 50px;
 }
 
@@ -244,7 +247,7 @@ section {
   }
   /* ページタイトル */
   .page-heading {
-    padding: 200px 0 100px;
+    padding: 200px 40px 100px;
   }
   .btn--more {
     font-size: 1rem;
@@ -259,6 +262,8 @@ section {
   /*  パンクズ  */
   .breadcrumbs {
     height: 50px;
+  }
+  .breadcrumbs-mb {
     margin-bottom: 100px;
   }
 }
@@ -1015,6 +1020,29 @@ span.wpcf7-not-valid-tip::before {
   font-size: 1rem;
   font-weight: bold;
 }
+.pagination {
+  display: flex;
+  justify-content: space-between;
+  min-width: 270px;
+  width: 60%;
+  margin: 40px auto 0;
+}
+
+.to-works a,
+.prev a,
+.next a {
+  display: block;
+  transition: all 0.3s;
+  padding: 0 0.5em;
+  border-radius: 4px;
+}
+.to-works a:hover,
+.prev a:hover,
+.next a:hover {
+  background: #FFD54D;
+  color: #333;
+}
+
 @media (min-width: 768px) {
   .single__wrapper {
     padding: 80px 0;
@@ -1045,10 +1073,119 @@ span.wpcf7-not-valid-tip::before {
     padding-top: 2px;
     flex: 1;
   }
+  .pagination {
+    margin: 80px auto 0;
+  }
 }
 /* -------------------------------------------- */
-/* contact */
+/* profile */
 /* -------------------------------------------- */
+.prof-sec {
+  padding: 50px 0;
+}
+
+.prof-heading {
+  color: #E6E5EF;
+  position: absolute;
+  font-size: 2.5rem;
+  bottom: 0;
+  z-index: -1;
+}
+
+.posi-left {
+  left: 0px;
+}
+
+.posi-right {
+  right: 0px;
+}
+
+.profile-container {
+  border: 1px solid #000;
+  max-width: 1000px;
+  margin: 0 auto;
+  position: relative;
+  background-color: skyblue;
+}
+
+.career__list {
+  position: relative;
+  padding: 0 0 0 1.8em;
+}
+.career__list::before {
+  content: " ";
+  width: 2px;
+  background: #333;
+  display: block;
+  position: absolute;
+  top: 25px;
+  left: 0.7em;
+  bottom: 2px;
+}
+.career__list:last-child::before {
+  height: 60%;
+}
+.career__timeline {
+  display: block;
+  color: #808080;
+}
+.career__timeline::before {
+  content: "";
+  width: 1.5em;
+  height: 1.5em;
+  border-radius: 50%;
+  background: #FFD54D;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.career__content {
+  padding: 1.5em 0;
+}
+
+.skills .skill-set-list {
+  width: 100%;
+  margin-bottom: 32px;
+}
+.skills .skill-set-list__name {
+  margin-bottom: 8px;
+  font-weight: bold;
+  display: flex;
+  align-items: flex-end;
+}
+.skills .skill-set-list__image {
+  background: url(../images/wordpress_icon_130782.png) center/cover;
+  width: 40px;
+  height: 40px;
+  display: inline-block;
+  margin-right: 8px;
+}
+@media (min-width: 768px) {
+  .prof-sec {
+    padding: 100px 0;
+  }
+  .prof-heading {
+    font-size: 7.5rem;
+  }
+  .posi-left {
+    left: -10%;
+  }
+  .posi-right {
+    right: -10%;
+  }
+  .skill-set-list {
+    width: 48%;
+    margin-bottom: 40px;
+  }
+  .skill-set-list__name {
+    margin-bottom: 12px;
+  }
+  .skill-set-list__image {
+    width: 50px;
+    height: 50px;
+  }
+}
 /* -------------------------------------------- */
 /* contact */
 /* -------------------------------------------- */
